reports/pickle.log
Traceback (most recent call last):
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\ana\appdata\local\programs\python\python37\lib\asyncio\base_events.py", line 568, in run_until_complete
    return future.result()
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
## A Pickle Problem

We're going to explore quantum algorithms in this section.

Joey is visiting their friend Bob on Mars, when another, mysterious character appears! It's Joey-Fresh,

![](images/joeyfresh.PNG)

<br>

Joey-Fresh gives Joey two boxes,

![](images/boxes.PNG)
<br>

Joey-Fresh tells Joey the boxes both have pickles in them, but doesn't say which kind - are they amazing Delux brand pickles, or regular old Blah brand?

![](images/pickle.PNG)
<br>

Joey decides to keep one pickle for themselves, and give one to Bob, but wants to make sure both pickles are the same type before they do this - otherwise they might give themselves the Delux, and Bob the Blah! (how rude!). 

How can Joey check if the pickles are the same?

Joey will try to check if the pickles are the same brand using a computer. As we will see, this will let them check using just one step! Joey begins by placing pickle boxes inside their quantum computer:

![](images/computer.PNG)

<br>

Joey's computer will now implement a special gate, which we will call the "D" gate. You will write the code yourself to get the DGate working. To do this, go into the [Scratch project](https://scratch.mit.edu/projects/414238323/).


Look under the "Qubit" sprite and check out its code. Then look for the code where the DGate is defined, which looks like this:

![](images/DG.PNG)

<br>

Try to make the "D" gate do the following to the up and down states,

- If pickle 1 is Delux, and we give the quantum computer the $\uparrow$ state, then we get back - $\uparrow$.
- If pickle 2 is Delux, and we give the quantum computer the $\downarrow$ state, then we get back - $\downarrow$. 

Otherwise the computer doesn't change anything. 
------------------

[1;36m  File [1;32m"<ipython-input-1-f7f77a5d9e97>"[1;36m, line [1;32m3[0m
[1;33m    We're going to explore quantum algorithms in this section.[0m
[1;37m                                                              ^[0m
[1;31mSyntaxError[0m[1;31m:[0m EOL while scanning string literal

SyntaxError: EOL while scanning string literal (<ipython-input-1-f7f77a5d9e97>, line 3)

